--- a/src/sample/mainScene.fxml
+++ b/src/sample/mainScene.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.ControllerMain"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="myAnc" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ControllerMain">
+   <children>
+      <Label fx:id="timeLabel" layoutX="286.0" layoutY="14.0" text="Label" AnchorPane.leftAnchor="286.0" AnchorPane.rightAnchor="286.0" AnchorPane.topAnchor="14.0" />
+   </children>
 </AnchorPane>
