--- a/src/WinnerScene.fxml
+++ b/src/WinnerScene.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.WinnerController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WinnerController">
    <children>
       <VBox layoutX="221.0" layoutY="133.0" prefHeight="95.0" prefWidth="158.0" AnchorPane.leftAnchor="221.0" AnchorPane.rightAnchor="221.0" AnchorPane.topAnchor="133.0">
          <children>
@@ -17,8 +17,8 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField prefWidth="148.0" />
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" text="Сохранить">
+            <TextField fx:id="NameTextField" prefWidth="148.0" />
+            <Button fx:id="saveButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" text="Сохранить">
                <VBox.margin>
                   <Insets left="30.0" top="10.0" />
                </VBox.margin>
