--- a/src/main/RecordTable/RecordTable.fxml
+++ b/src/main/RecordTable/RecordTable.fxml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.layout.VBox?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.RecordTable.RecordTableController">
    <children>
-      <TableView fx:id="recordTable" layoutX="44.0" layoutY="24.0" minHeight="334.0" minWidth="513.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="340.0" prefWidth="532.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="30.0">
+      <TableView fx:id="recordTable" layoutX="44.0" layoutY="24.0" minHeight="298.0" minWidth="513.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="298.0" prefWidth="532.0" AnchorPane.bottomAnchor="72.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
         <columns>
-          <TableColumn fx:id="nameColumn" prefWidth="270.0" resizable="false" text="Имя" />
-          <TableColumn fx:id="movesColumn" minWidth="134.5" prefWidth="134.5" text="Количество &#10;     ходов" />
-            <TableColumn fx:id="timeColumn" minWidth="0.0" prefWidth="134.5" text="Время" />
+          <TableColumn fx:id="nameColumn" prefWidth="304.0" text="Имя" />
+          <TableColumn fx:id="movesColumn" minWidth="2.0" prefWidth="126.0" text="Количество &#10;     ходов" />
+            <TableColumn fx:id="timeColumn" minWidth="0.0" prefWidth="109.0" text="Время" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
+      <VBox alignment="TOP_CENTER" layoutX="113.0" layoutY="334.0" prefHeight="52.0" prefWidth="374.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="113.0" AnchorPane.rightAnchor="113.0">
+         <children>
+            <Button fx:id="resetButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="420.0" text="Сброс" />
+            <Button fx:id="toMenuButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="420.0" onAction="#onClickToMenu" text="В меню" />
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
