--- a/src/main/RecordTable/RecordTable.fxml
+++ b/src/main/RecordTable/RecordTable.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.RecordTable.RecordTableController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.RecordTable.RecordTableController">
    <children>
       <TableView fx:id="recordTable" layoutX="44.0" layoutY="24.0" minHeight="298.0" minWidth="513.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="298.0" prefWidth="532.0" AnchorPane.bottomAnchor="72.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
         <columns>
@@ -18,11 +19,12 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <VBox alignment="TOP_CENTER" layoutX="113.0" layoutY="334.0" prefHeight="52.0" prefWidth="374.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="113.0" AnchorPane.rightAnchor="113.0">
+      <VBox alignment="TOP_CENTER" layoutX="30.0" layoutY="334.0" prefHeight="52.0" prefWidth="374.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="30.0">
          <children>
-            <Button fx:id="resetButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="420.0" onAction="#onClickReset" text="Сброс" />
-            <Button fx:id="toMenuButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="420.0" onAction="#onClickToMenu" text="В меню" />
+            <Button fx:id="resetButton" mnemonicParsing="false" onAction="#onClickReset" prefHeight="26.0" prefWidth="420.0" text="Сброс" />
+            <Button fx:id="toMenuButton" mnemonicParsing="false" onAction="#onClickToMenu" prefHeight="26.0" prefWidth="420.0" text="В меню" />
          </children>
       </VBox>
+      <ChoiceBox fx:id="choiceBox" layoutX="420.0" layoutY="334.0" onAction="#onClickChoice" prefWidth="150.0" AnchorPane.bottomAnchor="41.0" AnchorPane.rightAnchor="30.0" />
    </children>
 </AnchorPane>
