docs to directory

--- a/src/main/Menu/Menu.fxml
+++ b/src/main/Menu/Menu.fxml
@@ -10,7 +10,7 @@
 <AnchorPane id="AnchorPane" maxHeight="327.0" maxWidth="500" minHeight="260.0" minWidth="237.0" prefHeight="262.0" prefWidth="238.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Menu.MenuController">
 
       <VBox alignment="CENTER" layoutX="30.0" layoutY="51.0" maxHeight="1.7976931348623157E308" maxWidth="300.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="160.0" prefWidth="179.0" spacing="5.0" style="-fx-background-color: TRANSPARENT;" AnchorPane.bottomAnchor="51.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="29.0" AnchorPane.topAnchor="51.0">
-         <Label id="mainLabel" alignment="CENTER" prefHeight="25.0" prefWidth="182.0" text="Хайнойские башни" textAlignment="CENTER" textFill="WHITE">
+         <Label id="mainLabel" alignment="CENTER" prefHeight="25.0" prefWidth="182.0" text="Ханойские башни" textAlignment="CENTER" textFill="WHITE">
             <font>
                <Font name="Arial" size="18.0" />
             </font>
